Fix layout on IE 11
1. Fix button "Купить"
2. Fix search input

--- a/src/scss/blocks/picture-card.scss
+++ b/src/scss/blocks/picture-card.scss
@@ -48,7 +48,7 @@
   &__buy-button{
     @include main-button;
     max-width: 118px;
-    flex-grow: 1;
+    width: 100%;
     padding: 14px 0;
     &--request {
       box-shadow: 0 -150px 70px -120px rgb(80, 80, 80) inset,
